@@ -195,11 +195,6 @@ NS_IMETHODIMP ZimAccessor::GetMainPageUrl(nsACString &url, PRBool *retVal) {
   try {
     if (this->reader != NULL) {
       string urlstr = this->reader->getMainPageUrl();
-
-      if (urlstr.empty()) {
-	urlstr = this->reader->getFirstPageUrl(); 
-      }
-
       url = nsDependentCString(urlstr.c_str(), urlstr.size());
       *retVal = PR_TRUE;
     }
